--- a/package.json
+++ b/package.json
@@ -9,12 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@lexical/react": "^0.16.1",
+    "@liveblocks/client": "^2.3.0",
+    "@liveblocks/node": "^2.3.0",
+    "@liveblocks/react": "^2.3.0",
+    "@liveblocks/react-lexical": "^2.3.0",
+    "@liveblocks/react-ui": "^2.3.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "lexical": "^0.16.1",
     "lucide-react": "^0.412.0",
     "mongoose": "^8.5.1",
     "next": "14.2.5",
